--- a/Views/Layout.cshtml
+++ b/Views/Layout.cshtml
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <title>{{title}} - 01 Binary</title>
+        <title>01 Binary</title>
         
         <link rel="stylesheet" type="text/css" href="~/zero.min.css">
         <script type="text/javascript" src="~/zero.min.js"></script>
