--- a/Views/News/Index.cshtml
+++ b/Views/News/Index.cshtml
@@ -1,22 +1,142 @@
 @using ZeroWeb;
+@using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Http.Authentication
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ZeroWeb.Models.User> SignInManager
 
-<h1 data-pointer data-markdown>news</h1>
+<h1 data-pointer>news</h1>
 
 @foreach (var story in this.Model)
 {
 <div class="article">
+    <!-- Story title -->
     <h2>@Shared.FormatTitle(story.title)</h2>
+
+    <!-- Story metadata -->
     <p class="metadata">
+
+        <!-- Clock icon -->
+        <icon class="icon-header" data-src="images/banner.svg#clock" data-width="15" data-height="15"/>
+
+        <!-- Date -->
         <span class="date">@Shared.FormatDate(story.date)</span> by
-        <span class="author">@story.author</span>
+
+        <!-- Author -->
+        <a class="author" href="#">@story.author</a>
+
+        @if (!string.IsNullOrEmpty(story.location))
+        {
+            <!-- Geographic Location -->
+            @: - from
+            
+            @if (story.latitude != null && story.longitude != null && story.location != null)
+            {
+                <a class="location" href="https://www.google.com/maps/@@@(story.latitude),@(story.longitude),@(story.zoom)z" target="_blank">@story.location</a>
+            }
+            else
+            {
+                @story.location
+            }
+        }
+
+        <!-- Tags -->
         <span class="tags">
         @foreach (var tag in story.tags)
         {
-            <span class="tag">@Shared.FormatTag(tag)</span>
+            <tag>@Shared.FormatTag(tag)</tag>
         }
         </span>
     </p>
-    <p data-ng-show="news.loading[@story.id]"><span class="placeholder">[ loading... ]</span></p>
+
+    <!-- Story loading error -->
+    <error data-ng-show="news.error[@story.id]"
+           data-operation="'load news story'"
+           data-code="news.error[@story.id].status"
+           data-message="news.error[@story.id].statusText"></error>
+
+    <!-- Story loading indicator -->
+    <p data-ng-show="news.loading[@story.id]">
+        <span class="placeholder">[ loading... ]</span>
+    </p>
+
+    <!-- Story content -->
+    <!-- TODO: render on server with ss markdown -->
     <markdown data-ng-init="news.loadStory(@story.id)" data-ignore="">{{news[@story.id]}}</markdown>
+    
+    <!-- Story comments -->
+    <div class="comments" data-ng-init="news.loadComments(@story.id)">
+        <span class="metadata" data-ng-show="news.comments[@story.id].length">
+            <!-- Comments heading -->
+            <p>[{{news.comments[@story.id].length}}] Comments</p>
+
+            <!-- Story comment -->
+            <p class="comment" data-ng-repeat="comment in news.comments[@story.id]" data-ng-class="{'comment-official': comment.author === 'zero'}">
+                <span class="metadata">
+                    &nbsp;// <a class="author">{{comment.author}}</a> {{comment.date}}:
+                </span>
+                {{comment.content}}
+            </p>
+        </span>
+
+        <!-- Comments error -->
+        <error data-ng-show="news.commentError[@story.id]"
+               data-operation="news.commentOperation[@story.id]"
+               data-error="news.commentError[@story.id]"
+               data-code="news.commentError[@story.id].status"
+               data-message="news.commentError[@story.id].statusText"></error>
+
+        <!-- Add comment button -->
+        <button class="button-inline"
+                data-ng-class="{'button-inline-toggled': news.addingComment[@story.id]}"
+                data-ng-click="news.addingComment['@story.id'] = !news.addingComment['@story.id']">
+                + comment
+        </button>
+
+        <!-- Login providers -->
+        <span data-ng-show="!news.user && news.addingComment[@story.id]">
+            
+            @{ bool first = true; }
+
+            @foreach (var loginProvider in SignInManager.GetExternalAuthenticationSchemes().ToList())
+            {
+                if (first)
+                {
+                    first = false;
+
+                    <span class="metadata"> | login with: </span>
+                }
+                else
+                {
+                    <span class="metadata">, </span>
+                }
+
+                <button class="button-inline button-secondary"
+                        data-ng-show="!news.user"
+                        data-ng-click="news.login('@loginProvider.AuthenticationScheme')">
+                        @loginProvider.DisplayName.ToLower()
+                </button>
+            }
+        </span>
+
+        <!-- Add comment form -->
+        <div class="full-width form" data-ng-show="news.addingComment[@story.id]">
+            <!-- Register login name -->
+            <span class="metadata name-label comment-offset" data-ng-show="news.user && !news.user.name">name<span class="emphasis">*</span></span>
+
+            <div data-ng-show="news.user && !news.user.name">
+                <input type="text" class="form-input name-input" data-ng-model="news.registerName"></input>
+            </div>
+            
+            <!-- Comment input -->
+            <div class="full-width">
+                <textarea class="form-input comment-input full-width" data-ng-class="{'comment-offset': !news.user || (news.user && news.user.name)}" rows="1" data-ng-model="news.newComment[@story.id]"></textarea>
+            </div>
+
+            <!-- Submit button -->
+            <div>
+                <button class="button-form button-right" data-action data-ng-click="news.addComment(@story.id)"><icon class="icon-button" data-src="images/banner.svg#submit" data-width="10" data-height="10"></icon>submit</button>
+            </div>
+        </div>
+    </div>
 </div>
 }
