--- a/Views/News/Index.cshtml
+++ b/Views/News/Index.cshtml
@@ -6,6 +6,21 @@
 
 <h1 data-pointer>news</h1>
 
+<button class="button-special" data-primary>
+    <div class="button-special-leftcornerhighlight"></div>
+    <div class="button-special-leftcornerborder"></div>
+    <div class="button-special-leftcorner"></div>
+    <div class="button-special-content">
+        <icon class="icon-button" data-src="images/banner.svg#submit" data-width="10" data-height="10"></icon>
+        submit or maybe something else
+    </div>
+    <div class="button-special-rightcorner"></div>
+    <div class="button-special-rightcornershadow"></div>
+    <div class="button-special-rightshadow"></div>
+    <div class="button-special-rightcornerborder"></div>
+    <div class="button-special-bottomborder"></div>
+</button>
+
 @foreach (var story in this.Model)
 {
 <div class="article">
