--- a/Views/Index.cshtml
+++ b/Views/Index.cshtml
@@ -1,6 +1,9 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <!DOCTYPE html>
-<html data-ng-app="zeroApp">
+<!--[if lt IE 7]>   <html class="lt-ie9 lt-ie8 lt-ie7" lang="en" data-ng-app="zeroApp"> <![endif]-->
+<!--[if IE 7]>      <html class="lt-ie9 lt-ie8" lang="en" data-ng-app="zeroApp"> <![endif]-->
+<!--[if IE 8]>      <html class="lt-ie9" lang="en" data-ng-app="zeroApp"> <![endif]-->
+<html data-ng-app="zeroApp" data-user-agent>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,6 +38,7 @@
             <script type="text/javascript" src="~/Scripts/app/directives/pointerDirective.js"></script>
             <script type="text/javascript" src="~/Scripts/app/directives/tagDirective.js"></script>
             <script type="text/javascript" src="~/Scripts/app/directives/transitionDirective.js"></script>
+            <script type="text/javascript" src="~/Scripts/app/directives/userAgentDirective.js"></script>
 
             <script type="text/javascript" src="~/Scripts/app/factories/safeApplyFactory.js"></script>
             <script type="text/javascript" src="~/Scripts/app/factories/commentsFactory.js"></script>
