--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -273,37 +273,33 @@ a.author:hover
 
 .button-special-leftcorner
 {
-    content: "";
     border-top: $corner-small solid $background-color;
     border-right: $corner-small solid transparent;
     position: absolute;
-    left: -$border-thickness * 1.1;
-    top: -$border-thickness * 1.1;
+    left: -$border-thickness;
+    top: -$border-thickness;
 }
 
 .button-special-leftcornerborder
 {
-    content: "";
     border-top: $corner-small solid $primary-dark-color;
     border-right: $corner-small solid transparent;
     position: absolute;
-    left: -$border-thickness / 2;
-    top: -$border-thickness / 2;
+    left: 0;
+    top: 0;
 }
 
 .button-special-leftcornerhighlight
 {
-    content: "";
     border-top: $corner-small solid $primary-light-color;
     border-right: $corner-small solid transparent;
     position: absolute;
-    left: $border-thickness / 4;
-    top: $border-thickness / 4;
+    left: 1px;
+    top: 1px;
 }
 
 .button-special-rightcorner
 {
-    content: "";
     border-bottom: $corner-small solid $background-color;
     border-left: $corner-small solid transparent;
     position: absolute;
@@ -314,27 +310,24 @@ a.author:hover
 
 .button-special-rightcornershadow
 {
-    content: "";
-    border-bottom: $corner-small solid $primary-dark-shadow-color;
-    border-left: $corner-small solid transparent;
+    border-bottom: $corner-small + $border-thickness solid $primary-dark-shadow-color;
+    border-left: $corner-small + $border-thickness solid transparent;
     position: absolute;
-    right: $border-thickness / 4;
+    right: 0;
     bottom: 0;
 }
 
 .button-special-rightcornerborder
 {
-    content: "";
-    border-bottom: $corner-small solid $primary-dark-color;
-    border-left: $corner-small solid transparent;
+    border-bottom: $corner-small + $border-thickness solid $primary-dark-color;
+    border-left: $corner-small + $border-thickness solid transparent;
     position: absolute;
-    right: -$border-thickness / 2;
-    bottom: -$border-thickness / 2;
+    right: 0;
+    bottom: -$border-thickness;
 }
 
 .button-special-rightshadow
 {
-    content: "";
     border-right: $border-thickness solid $primary-dark-shadow-color;
     position: absolute;
     top: $border-thickness;
@@ -344,10 +337,9 @@ a.author:hover
 
 .button-special-bottomshadow
 {
-    content: "";
     border-bottom: $border-thickness solid $primary-dark-shadow-color;
     position: absolute;
-    bottom: -$border-thickness / 4;
+    bottom: 0;
     left: 0;
     right: 0;
 }
@@ -358,6 +350,18 @@ a.author:hover
     padding-right: 9px;
     padding-bottom: $corner-small / 2 + $border-thickness;
     padding-top: $corner-small / 2;
+}
+
+.lt-ie9 .button-special-leftcornerborder
+{
+    left: -$border-thickness;
+    top: -$border-thickness;
+}
+
+.lt-ie9 .button-special-rightcornerborder
+{
+    right: -$border-thickness;
+    bottom: -$border-thickness;
 }
 
 .lt-ie8 .button-special-leftcorner
@@ -412,6 +416,11 @@ a.author:hover
     right: -$border-thickness;
 }
 
+.lt-ie9 .button-special-bottomshadow
+{
+    bottom: 0;
+}
+
 .lt-ie8 .button-special-bottomshadow
 {
     bottom: -$border-thickness;
@@ -419,8 +428,8 @@ a.author:hover
 
 .lt-ie8 .button-special-content
 {
-    padding-left: $corner-small * 0.9;
-    padding-right: $corner-small * 0.9;
+    padding-left: 7px;
+    padding-right: 7px;
     padding-bottom: $border-thickness * 3;
     padding-top: $border-thickness * 2;
 }
@@ -437,18 +446,19 @@ a.author:hover
 
 .lt-ie9 .button-special-leftcorner
 {
-    left: -2px !important;
+    left: -$border-thickness * 2;
 }
 
 .lt-ie9 .button-special-rightcorner
 {
-    bottom: -2px !important;
+    bottom: -$border-thickness * 2;
+    right: -$border-thickness * 2;
 }
 
 .lt-ie9 .button-special-rightcornershadow
 {
-    right: 0;
-    bottom: 0;
+    right: -$border-thickness;
+    bottom: -$border-thickness;
 }
 
 .ie .button-special:before
@@ -781,8 +791,8 @@ a.author:hover
     display: inline;
     position: relative;
     fill: $primary-text-color;
-    top: 2pt;
-    margin-right: 2pt;
+    top: $border-thickness * 3;
+    margin-right: $border-thickness;
 }
 
 .comments
