--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -508,7 +508,7 @@ a.author:hover
     .hi-dpi .button-special-rightcornerborder
     {
         bottom: 0;
-        right: -$border-thickness / 2;
+        right: 0;
     }
 
     .button-special
